--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTRO</title>
-    <link rel="stylesheet" href="intro.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 
 <body>
     <div class="banner">
         <div class="navbar">
-            <div class="logo"><img src="LOGO.png" alt=""></div>
+            <div class="logo"><a href="index.html"><img src="LOGO.png" alt=""></a></div>
             <ul>
-                <li class="home"><a href="intro.html">Home</a></li>
-                <li class="hobby"><a href="hob.html">Hobbies</a></li>
-                <li class="skill"><a href="skills.html">Skills</a></li>
+                <li class="home"><a href="index.html">Home</a></li>
+                <li class="hobby"><a href="index2.html">Hobbies</a></li>
+                <li class="skill"><a href="index3.html">Skills</a></li>
 
             </ul>
             
@@ -26,8 +26,8 @@
             <h1>WELCOME TO MY WEBSITE</h1>
             <p>My name is Aditya Singh.I am from CSAI branch.I am really interested in programming and want to learn it.I love to explore different things which are out of my comfort zone</p>
             <div>
-                <button type="button"><span></span><a href="hobbies.html">Hobbies</a></button>
-                <button type="button"><span></span><a href="skills.html">Skills</a></button>
+                <button type="button"><span></span><a href="index2.html">Hobbies</a></button>
+                <button type="button"><span></span><a href="index3.html">Skills</a></button>
             </div>
             
             </div>
