--- a/index2.html
+++ b/index2.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobbies</title>
-    <link rel="stylesheet" href="hob.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <div class="logo"><img src="LOGO.png" alt=""></div>
+            <div class="logo"><a href="index.html"><img src="LOGO.png" alt=""></a></div>
             <ul>
-                <li class="home"><a href="intro.html">Home</a></li>
-                <li class="hobby"><a href="hob.html">Hobbies</a></li>
-                <li class="skills"><a href="skills.html">Skills</a></li>
+                <li class="home"><a href="index.html">Home</a></li>
+                <li class="hobby"><a href="index2.html">Hobbies</a></li>
+                <li class="skills"><a href="index3.html">Skills</a></li>
 
             </ul>
             
