--- a/index3.html
+++ b/index3.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
-    <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <div class="logo"><img src="LOGO.png" alt=""></div>
+          <div class="logo"><a href="index.html"><img src="LOGO.png" alt=""></a></div>
             <ul>
-                <li><a href="intro.html">Home</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index2.html">Hobbies</a></li>
                 <li class="skills"><a href="#">Skills</a><div class="underline"></div></li>
 
             </ul>
